<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/dark_gray"
    app:cardCornerRadius="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modelo"
            android:textColor="@color/snow"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/item_part_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/part_number"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/item_data_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_hora"
            android:textColor="@color/gray"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>